[package]
name = "AdventOfCode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
num = "0.4.1"
regex = { version = "1.10.2", features = [] }
rand = "0.8.5"
